[package]
name = "rsa"
version = "0.1.0"
authors = ["Rohit Sarkar <rohitsarkar5398@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand= "0.5"
num-bigint= { version = "0.2", features = ["rand"] }
num-traits ="0.2"
